# sprit

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  demo.cpp
src/: CMakeLists.txt
src/sprit/: sprit.cpp  sprit.h
